# hello_github_actions

./: .gitignore  CMakeLists.txt  header.hpp  main.cpp  source.cpp
.github/workflows/: build_cmake.yml  check_branch.yml  cmake.yml
